# Psyduck

./: .gitignore  .pre-commit-config.yaml  README.md  example.py  fit_toolbox.py  main.py  operations.py  pyproject.toml  spin.py
.claude/: CLAUDE.md  settings.json  settings.local.json
beating/: ramsey_beating.ipynb
dynamical decoupling/: continuous_DD.ipynb  dynamical_decoupling_pulse_construction.ipynb  rotary_echo.ipynb
global rotations/: global_rabi.ipynb  global_rotations.ipynb  parity_oscillations.ipynb
ionization shock/: errorspace_readout_simulation.ipynb
ionization_shock/: ionization_shock.py  ionization_shock_direct_projection.ipynb  lindblad_modeling_Ge.ipynb  lindblad_modeling_Sb.ipynb
noise model/: HighSpin.py  HighSpinModel.py  dephasing_vs_cat_angle.ipynb  dephasing_vs_dimension.ipynb  dynamical_decoupling_pulse_construction.ipynb  pulses_with_dephasing.ipynb  pulses_with_dephasing_qt.ipynb  qudit_dephasing_model_fit.ipynb  qudit_dephasing_qutip_model_fit.ipynb  sb_dephasing_model_fit.ipynb
plotting/: readout_plot.py  wigner_plot.py
psyduck/: __init__.py  cat_qubit.py  classical_dynamics.py  evolve.py  fit_toolbox.py  hamiltonians.py  noise.py  operations.py  spin.py  spinInterface.py  spin_composite.py  spin_series.py  tensors.py
quadrupole modeling/: H_quad.npy  H_quad_fit.npy  H_quad_laura.npy  analyzed_data_24.nc  extracting_quadrupole_tensor.ipynb  first and second order quadrupole.ipynb
scripts/: check_notebooks.py
src/: fit_toolbox.py  noise.py  operations.py  spin.py
tests/: conftest.py  test_cat_qubit.py  test_evolve.py  (+7 more)
(+86 files in other folders)
