[project]
name = "psyduck"
version = "1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "lmfit>=1.3.4",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "qutip>=5.2.3",
    "scipy>=1.17.1",
    "scipy-stubs~=1.17.1",
    "xarray>=2026.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
